--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -237,7 +237,7 @@
       <ul class="ml">
         <li>投稿した短歌を編集する機能を追加</li>
         <li>ユーザーページに短歌の投稿数を確認できる表示を追加</li>
-        <li>プロフィールの字数制限を140以内から300字以内に緩和</li>
+        <li>プロフィールの字数制限を緩和</li>
       </ul>
     </dd>
     <dt><time>2018/06/26</time></dt>
