--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,20 +46,10 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script>
-      document.addEventListener('turbolinks:load', function () {
-        var ads = document.querySelectorAll('.adsbygoogle');
-        if (ads.length > 0) {
-          ads.forEach(function (ad) {
-            if (ad.firstChild) {
-              ad.removeChild(ad.firstChild);
-            }
-          });
-          ads.forEach(function() {
-            window.adsbygoogle = window.adsbygoogle || [];
-            window.adsbygoogle.push({});
-          });
-        }
-      }
+      (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-1531335298157592",
+        enable_page_level_ads: true
+      });
     </script>
   </head>
   <body>
