--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,6 +29,14 @@ a:hover {
   vertical-align: middle;
 }
 
+.fab {
+  display: inline;
+}
+
+.fas {
+  display: inline;
+}
+
 .page-link {
   color: $utakata-blue;
   border-radius: 0.25rem;
@@ -150,6 +158,7 @@ h6 {
 
 .like {
   color: $utakata-red;
+  display: inline;
   vertical-align: middle;
   -webkit-writing-mode: horizontal-tb;
   -ms-writing-mode: rl;
