--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,10 +6,6 @@
   <%= link_to (image_tag @user.avatar.url(:medium), class: 'rounded'), user_path(id: @user.id), method: :get, class: 'align-middle' %>&nbsp;
   <%= link_to @user.name, user_path(id: @user.id), method: :get, class: 'lg tanka-link' %>&nbsp;
   <span class="align-middle"><%= @post.published_at.strftime('%Y.%-m.%-d %-H:%M') %></span>&nbsp;
-  <% if @user == current_user %>
-    <%= link_to '編集', edit_post_path(id: @post.id), method: :get, class: 'align-middle' %>&nbsp;
-    <%= link_to '削除', @tanka, method: :delete, data: { confirm: '本当に削除しますか？' }, class: 'align-middle' %>
-  <% end %>
   <% twitter_user = URI.escape(@user.name) %>
   <% twitter_tanka = URI.escape(tanka) %>
   <a href="<%= 'https://twitter.com/share?url=' + url_for(only_path: false) + '&text=' + twitter_tanka + '%0a／' + twitter_user + '%0a' %>" target="_blank"><i class="align-middle lg fab fa-twitter"></i></a>&nbsp;
@@ -17,6 +13,10 @@
     <%= render 'favorites/favorites', post: @post, size: 'lg' %>
   <% else %>
     <i class="lg fas fa-heart"></i><%= link_to @post.followers_by_type_count('User'), followers_post_path(id: @post.id), method: :get, class: 'like lg' %>
+  <% end %>
+  <% if @user == current_user %>
+    <%= link_to '編集', edit_post_path(id: @post.id), method: :get, class: 'd-inline-block align-middle' %>&nbsp;
+    <%= link_to '削除', @tanka, method: :delete, data: { confirm: '本当に削除しますか？' }, class: 'd-inline-block align-middle' %>
   <% end %>
   <p class="lg"><%= @post.tanka.html_safe %></p>
 </div>
