--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -39,6 +39,12 @@
   </ul>
   <h4 class="mt-4">更新履歴</h4>
   <dl>
+    <dt><time>2019/03/29</time></dt>
+    <dd>
+      <ul class="ml">
+        <li>PCで一部のリンクがクリック不可になっていた問題を解消</li>
+      </ul>
+    </dd>
     <dt><time>2019/03/21</time></dt>
     <dd>
       <ul class="ml">
