「Utakataとは？」の文言を調整

--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -4,7 +4,7 @@
 <div class="col-lg-5 mx-auto">
   <h4 class="mt-4">サイトのご案内</h4>  
   <h5 class="mt-4">Utakataとは？</h5>
-  <p>短歌を投稿・共有できるサイトです。<%= link_to 'アカウント登録', new_user_registration_path %>してご利用ください。歌人をフォローしたり、ハートをタップして歌にいいねしたり、Twitterに短歌をシェアしたりすることができます。全機能を無料でご利用いただけます。</p>
+  <p>短歌を投稿・共有できるサイトです。<%= link_to 'アカウント登録', new_user_registration_path %>してご利用ください。全機能を無料でご利用いただけます。</p>
   <p><a href="https://fuyu.hatenablog.com/entry/2018/06/24/233652" target="_blank">開発の背景を紹介するブログ</a>を書きました。</p>
   <h5 id="mis-spelling" class="mt-4">アカウント登録時の注意点</h5>
   <p>メールアドレスにスペルミスがあると、確認用メールが届かずアカウント登録できないのでご注意ください。確認用メールが届かない場合は、スペルミスの可能性が高いので、もう一度正しいメールアドレスで<%= link_to '新規アカウント登録', new_user_registration_path %>を行ってください。</p>
@@ -39,6 +39,12 @@
   </ul>
   <h4 class="mt-4">更新履歴</h4>
   <dl>
+    <dt><time>2019/07/14</time></dt>
+    <dd>
+      <ul class="ml">
+        <li>「Utakataとは？」の文言を調整</li>
+      </ul>
+    </dd>
     <dt><time>2019/07/13</time></dt>
     <dd>
       <ul class="ml">
