クラウドファンディングの案内をトップに表示

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,6 +29,10 @@ a:hover {
   vertical-align: middle;
 }
 
+.fa-gripfire {
+  color: $utakata-red;
+}
+
 .page-link {
   color: $utakata-blue;
   border-radius: 0.25rem;
