スタイルを調整

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,7 +3,7 @@
 
 <div class="vertical serif tanka-index mt-3">
   <h6>
-    <%= content_tag(:i, '', class: 'fab fa-gripfire') %> <a href="https://camp-fire.jp/projects/view/179262" target="_blank">歌会機能を追加するクラウドファンディング実施中</a> <%= content_tag(:i, '', class: 'fab fa-gripfire') %>
+    <%= content_tag(:i, '', class: 'fab fa-gripfire') %> <a href="https://camp-fire.jp/projects/view/179262" target="_blank" class="align-middle">歌会機能を追加するクラウドファンディング実施中</a> <%= content_tag(:i, '', class: 'fab fa-gripfire') %>
   </h6>
   <h6>
     新しい歌｜<%= link_to '人気の歌', root_path, method: :get %><!--
