--- a/app/views/posts/popular.html.erb
+++ b/app/views/posts/popular.html.erb
@@ -1,4 +1,4 @@
-<div class="vertical serif tanka-index mt-3">d
+<div class="vertical serif tanka-index mt-3">
   <h6>
     <%= link_to '新しい歌', posts_path, method: :get %>｜人気の歌<!--
     --><% unless user_signed_in? %><!--
