iPhoneの「ホーム画面に追加」機能に関する注意書きを削除

--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -43,6 +43,7 @@
     <dd>
       <ul class="ml">
         <li>クラウドファンディングの案内を削除</li>
+        <li>iPhoneの「ホーム画面に追加」機能に関する注意書きを削除</li>
       </ul>
     </dd>
     <dt><time>2019/08/06</time></dt>
