--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,7 @@
 @import "bootstrap";
 @import "font-awesome-sprockets";
 @import "font-awesome";
-@import "toastr";
+@import "../../../node_modules/toastr/toastr.scss";
 
 $utakata-blue: #0095d9;
 $utakata-blue-hover: #00a7f3;
