--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -19,12 +19,13 @@
     <li>
   </ul>
   <div class="tab-content" id="myTabContent">
-    <div class="tab-pane fade show active" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+    <div class="tab-pane fade show active" id="profile" role="tabpanel" aria-labelledby="profile-tab" data-controller="user">
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
         <div class="field form-group mt-3">
           <%= f.label :アイコン %><br />
           <%= image_tag user.avatar.url, class: 'mb-2 rounded' %>
-          <%= f.file_field :avatar, class: 'filestyle', "data-buttonBefore": true %>
+          <%= f.file_field :avatar, accept: 'image/*', 'data-action': 'change->user#submit' %><br>
+          <%= f.label :avatar, 'ファイル選択', class: 'btn btn-sm btn-primary' %>
         </div>  
         <div class="field form-group">
           <%= f.label :ハンドルネーム %><br />
@@ -39,7 +40,7 @@
           <%= f.text_field :twitter_id, class: 'form-control' %>
         </div>
         <div class="form-group actions">
-          <%= f.submit "変更する", class: 'btn btn-primary' %>
+          <%= f.submit "変更する", class: 'btn btn-primary', 'data-target': 'user.submit' %>
         </div>
       <% end %>
     </div>
@@ -77,3 +78,11 @@
     </div>
   </div>
 </div>
+<script>
+// var input = document.querySelector('#user_avatar')
+// input.addEventListener('change', updateImageDisplay)
+// function updateImageDisplay() {
+//   var submit = document.querySelector("input[type='submit']")
+//   submit.click()
+// }
+</script>
