--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -39,6 +39,12 @@
   </ul>
   <h4 class="mt-4">更新履歴</h4>
   <dl>
+    <dt><time>2020/01/03</time></dt>
+    <dd>
+      <ul class="ml">
+        <li>ファイル選択後ただちにアイコン画像が更新されるように変更</li>
+      </ul>
+    </dd>
     <dt><time>2019/11/10</time></dt>
     <dd>
       <ul class="ml">
