更新履歴を追加

--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -39,6 +39,13 @@
   </ul>
   <h4 class="mt-4">更新履歴</h4>
   <dl>
+    <dt><time>2020/01/04</time></dt>
+    <dd>
+      <ul class="ml">
+        <li>ドロップダウンメニューが開かない問題を解消</li>
+        <li>サイトの表示速度を改善</li>
+      </ul>
+    </dd>
     <dt><time>2020/01/03</time></dt>
     <dd>
       <ul class="ml">
