--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,6 +1,5 @@
 @import "~bootstrap/scss/bootstrap"; 
 @import "~@fortawesome/fontawesome-free/scss/fontawesome.scss";
-@import "~toastr/toastr.scss";
 
 $utakata-blue: #0095d9;
 $utakata-blue-hover: #00a7f3;
@@ -194,4 +193,16 @@ h6 {
 
 #user_avatar {
   display: none;
+}
+
+.text-primary {
+  color: $utakata-blue;
+}
+
+.text-danger {
+  color: $utakata-red;
+}
+
+.toast {
+  min-width: 220px;
 }
