--- a/app/views/layouts/_error_messages.html.erb
+++ b/app/views/layouts/_error_messages.html.erb
@@ -1,7 +1,5 @@
-<% if resource.errors.present? %>
-  <script type= "text/javascript">
-    <% resource.errors.full_messages.each do |message| %>
-　    toastr.warning('<%= message %>')
-    <% end %>
-  </script>
+<div aria-live="polite" aria-atomic="true" style="position: fixed; right: 0; z-index: 999999;">
+<% resource.errors.full_messages.each do |message| %>
+  <%= render('layouts/toast_item', type: 'alert', message: message) %>
 <% end %>
+</div>
