--- a/app/views/layouts/_error_messages.html.erb
+++ b/app/views/layouts/_error_messages.html.erb
@@ -1,4 +1,4 @@
-<div aria-live="polite" aria-atomic="true" style="position: fixed; right: 0; z-index: 999999;">
+<div class="toast-wrapper" aria-live="polite" aria-atomic="true">
 <% resource.errors.full_messages.each do |message| %>
   <%= render('layouts/toast_item', type: 'alert', message: message) %>
 <% end %>
