toastメッセージのスタイルを調整

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -199,6 +199,10 @@ h6 {
   min-width: 220px;
 }
 
+.toast-body {
+  background-color: white;
+}
+
 .toast-wrapper {
   position: fixed;
   right: 0;
