--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -20,9 +20,9 @@
             <div class="dropdown-divider"></div>
             <%= link_to 'ご案内', infos_path, method: :get, class: 'dropdown-item' %>
             <div class="dropdown-divider"></div>
-            <div class="px-2 py-2">
+            <div class="px-2 py-2" data-controller="navbar">
               <%= form_tag(search_posts_path, method: :get) do %>
-                <%= text_field_tag :search, '', autofocus: false, class: 'form-control form-control-sm', type: 'search', placeholder: '短歌 / 歌人を検索' %>
+                <%= text_field_tag :search, '', autofocus: false, class: 'form-control form-control-sm', type: 'search', placeholder: '短歌 / 歌人を検索', 'data-action': 'click->navbar#prevent' %>
               <% end %>
             </div>
           </div>
