自己紹介にURLが含まれる場合リンクに変換する処理を追加

--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -39,6 +39,12 @@
   </ul>
   <h4 class="mt-4">更新履歴</h4>
   <dl>
+    <dt><time>2020/05/30</time></dt>
+    <dd>
+      <ul class="ml">
+        <li>自己紹介にURLが含まれる場合リンクに変換する処理を追加</li>
+      </ul>
+    </dd>
     <dt><time>2020/02/29</time></dt>
     <dd>
       <ul class="ml">
