改行を反映

--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -42,7 +42,8 @@
     <dt><time>2020/05/30</time></dt>
     <dd>
       <ul class="ml">
-        <li>自己紹介にURLが含まれる場合リンクに変換する処理を追加</li>
+        <li>自己紹介にURLが含まれる場合リンクに変換するように変更</li>
+        <li>自己紹介の改行を表示に反映するように変更</li>
       </ul>
     </dd>
     <dt><time>2020/02/29</time></dt>
