--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -24,9 +24,7 @@
     <span class="align-middle horizontal"><%= @count %></span>
   </div>
     <% if @user.profile.present? %>
-      <p class="sm border-primary p-3 rounded ml-0 h-88">
-        <%= raw Rinku.auto_link(h(@user.profile), :all, 'target="_blank"') %>
-      </p>
+      <%= simple_format raw(Rinku.auto_link(h(@user.profile), :all, 'target="_blank"')), class: 'sm border-primary p-3 rounded ml-0 h-88' %>
     <% end %>
   <div class="nowrap">
     <%= paginate @posts %>
