投稿ボタンの色を緑に変更

--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -39,6 +39,12 @@
   </ul>
   <h4 class="mt-4">更新履歴</h4>
   <dl>
+    <dt><time>2020/06/09</time></dt>
+    <dd>
+      <ul class="ml">
+        <li>投稿ボタンの色を緑に変更</li>
+      </ul>
+    </dd>
     <dt><time>2020/05/30</time></dt>
     <dd>
       <ul class="ml">
