--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -3,6 +3,8 @@
 
 $utakata-blue: #0095d9;
 $utakata-blue-hover: #00a7f3;
+$utakata-green: #3eb370;
+$utakata-green-hover: #47cc7e;
 $utakata-red: #e60033;
 
 a {
@@ -64,6 +66,18 @@ a:hover {
   color: white;
   background-color: $utakata-blue-hover;
   border-color: $utakata-blue;
+}
+
+.btn-success {
+  color: white;
+  background-color: $utakata-green;
+  border-color: $utakata-green;
+}
+
+.btn-success:hover {
+  color: white;
+  background-color: $utakata-green-hover;
+  border-color: $utakata-green;
 }
 
 .btn-primary-reversed {
