Revert "navbarのボタンの色を変更"
This reverts commit 55204de0fbf9e1bf8bc2bdf25983fc419a076bdc.

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -80,6 +80,18 @@ a:hover {
   border-color: $utakata-green;
 }
 
+.btn-primary-reversed {
+  color: $utakata-blue;
+  background-color: white;
+  border-color: white;
+}
+
+.btn-primary-reversed:hover {
+  color: white;
+  background-color: $utakata-blue-hover;
+  border-color: $utakata-blue;
+}
+
 .tanka-link {
   color: black;
   vertical-align: middle;
