--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -32,7 +32,7 @@
         <% else %>
           <li class="nav-item form-inline">
         <% end %>
-            <%= link_to '投稿する', new_post_path, method: :get, class: 'btn btn-sm btn-success' %>
+            <%= link_to '投稿する', new_post_path, method: :get, class: 'btn btn-sm btn-primary-reversed' %>
           </li>
       </ul>
     <% else %>
