更新履歴追加

--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -39,6 +39,12 @@
   </ul>
   <h4 class="mt-4">更新履歴</h4>
   <dl>
+    <dt><time>2020/06/19</time></dt>
+    <dd>
+      <ul class="ml">
+        <li>画面遷移時に通知アイコンの表示がちらつく問題を解消</li>
+      </ul>
+    </dd>
     <dt><time>2020/06/09</time></dt>
     <dd>
       <ul class="ml">
