更新履歴追加

--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -43,6 +43,7 @@
     <dd>
       <ul class="ml">
         <li>画面遷移時に通知アイコンの表示がちらつく問題を解消</li>
+        <li>設定画面のレイアウトを調整</li>
       </ul>
     </dd>
     <dt><time>2020/06/09</time></dt>
