--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -39,6 +39,12 @@
   </ul>
   <h4 class="mt-4">更新履歴</h4>
   <dl>
+    <dt><time>2020/06/20</time></dt>
+    <dd>
+      <ul class="ml">
+        <li>設定画面のレイアウトを調整</li>
+      </ul>
+    </dd>
     <dt><time>2020/06/19</time></dt>
     <dd>
       <ul class="ml">
