--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -42,6 +42,7 @@
     <dt><time>2020/06/20</time></dt>
     <dd>
       <ul class="ml">
+        <li>歌人一覧で横スクロールバーの位置が高すぎる問題を解消</li>
         <li>設定画面のレイアウトを調整</li>
       </ul>
     </dd>
