--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -43,6 +43,7 @@
     <dd>
       <ul class="ml">
         <li>歌人一覧で横スクロールバーの位置が高すぎる問題を解消</li>
+        <li>ボタンの色を調整</li>
         <li>設定画面のレイアウトを調整</li>
       </ul>
     </dd>
