リファクタ

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -3,7 +3,7 @@
 
 $utakata-blue: #0095d9;
 $utakata-blue-hover: #00a9f2;
-$utakata-blue-hover-light: #00B2ff;
+$utakata-blue-hover-light: #00b2ff;
 $utakata-green: #3eb370;
 $utakata-green-hover: #47cc7e;
 $utakata-red: #e60033;
