「サイトのご案内」の文言を調整

--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -28,8 +28,6 @@
   <p>歌人の一覧が表示されます。</p>
   <h5 class="mt-4">左上のUtakataロゴをタップすると…</h5>
   <p>新着短歌の一覧が表示されます。</p>
-  <h5 class="mt-4">別アカウントへのデータ移行</h5>
-  <p>設定画面からデータを別アカウントに移行する方法は現状ありません。データ移行をご希望の場合（メールログインのアカウントからTwitterログインのアカウントに移行したい場合など）は、下記連絡先にご連絡いただければ対応できます。</p>
   <h4 class="mt-4">連絡先</h4>
   <p>不具合の報告や疑問点のお問い合わせ、その他感想など、お気軽にご連絡ください。</p>
   <ul class="ml">
@@ -44,6 +42,7 @@
       <ul class="ml">
         <li>歌人一覧で横スクロールバーの位置が高すぎる問題を解消</li>
         <li>ボタンの色を調整</li>
+        <li>「サイトのご案内」の文言を調整</li>
         <li>設定画面のレイアウトを調整</li>
       </ul>
     </dd>
