--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -37,6 +37,12 @@
   </ul>
   <h4 class="mt-4">更新履歴</h4>
   <dl>
+    <dt><time>2020/06/21</time></dt>
+    <dd>
+      <ul class="ml">
+        <li>「新しい歌」と「人気の歌」をタブ表示するように変更</li>
+      </ul>
+    </dd>
     <dt><time>2020/06/20</time></dt>
     <dd>
       <ul class="ml">
@@ -271,7 +277,7 @@
     <dt><time>2018/11/03</time></dt>
     <dd>
       <ul class="ml">
-        <li>ドロップダウンメニューから「あたらしい歌」と「人気の歌」を削除</li>
+        <li>ドロップダウンメニューから「新しい歌」と「人気の歌」を削除</li>
       </ul>
     </dd>
     <dt><time>2018/10/30</time></dt>
