--- a/app/views/posts/popular.html.erb
+++ b/app/views/posts/popular.html.erb
@@ -1,10 +1,17 @@
 <div class="vertical serif tanka-index mt-3">
-  <h6>
-    <%= link_to '新しい歌', posts_path, method: :get %>｜人気の歌<!--
-    --><% unless user_signed_in? %><!--
-      -->｜<%= link_to 'サイトのご案内', infos_path, method: :get %>
+  <ul class="nav nav-tabs">
+    <li class="nav-item">
+      <%= link_to '新しい歌', posts_path, method: :get, class: 'nav-link vertical-tab' %>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active vertical-tab">人気の歌</a>
+    </li>
+    <% unless user_signed_in? %>
+      <li class="nav-item">
+        <%= link_to 'サイトのご案内', infos_path, method: :get, class: 'nav-link vertical-tab' %>
+      </li>
     <% end %>
-  </h6>
+  </ul>
   <%= paginate @posts %>
   <%= render 'layouts/posts' %>
   <%= paginate @posts %>
