リファクタ

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -60,7 +60,7 @@ a:hover {
 }
 
 .nav-link.active.vertical-tab {
-  border-color: #dee2e6 #dee2e6 #dee2e6 #fff;
+  border-color: #dee2e6 #dee2e6 #dee2e6 #ffffff;
 }
 
 .btn-sm {
