更新履歴変更

--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -40,7 +40,7 @@
     <dt><time>2020/06/21</time></dt>
     <dd>
       <ul class="ml">
-        <li>「新しい歌」と「人気の歌」をタブ表示するように変更</li>
+        <li>「新しい歌」と「人気の歌」の切り替え表示を変更</li>
       </ul>
     </dd>
     <dt><time>2020/06/20</time></dt>
