--- a/app/views/posts/popular.html.erb
+++ b/app/views/posts/popular.html.erb
@@ -1,5 +1,5 @@
 <div class="vertical serif tanka-index mt-3">
-  <ul class="nav nav-tabs">
+  <ul class="nav nav-tabs vertical-tab">
     <li class="nav-item">
       <%= link_to '新しい歌', posts_path, method: :get, class: 'nav-link vertical-tab' %>
     </li>
