--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,7 +2,7 @@
 <% @description = '新着短歌の一覧です。' %>
 
 <div class="vertical serif tanka-index mt-3">
-  <ul class="nav nav-tabs">
+  <ul class="nav nav-tabs vertical-tab">
     <li class="nav-item">
       <a class="nav-link active vertical-tab">新しい歌</a>
     </li>
