--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -41,6 +41,7 @@
     <dd>
       <ul class="ml">
         <li>「新しい歌」と「人気の歌」の切り替え表示を変更</li>
+        <li>ページネーションの表示を調整</li>
       </ul>
     </dd>
     <dt><time>2020/06/20</time></dt>
