「新しい歌」と「人気の歌」の切り替え非選択時の色を変更

--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -37,6 +37,12 @@
   </ul>
   <h4 class="mt-4">更新履歴</h4>
   <dl>
+    <dt><time>2020/06/27</time></dt>
+    <dd>
+      <ul class="ml">
+        <li>「新しい歌」と「人気の歌」の切り替え非選択時の色を変更</li>
+      </ul>
+    </dd>
     <dt><time>2020/06/21</time></dt>
     <dd>
       <ul class="ml">
