--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -9,6 +9,10 @@ $utakata-green: #3eb370;
 $utakata-green-hover: #47cc7e;
 $utakata-red: #e60033;
 
+text-secondary {
+  color: #dee2e6;
+}
+
 a {
   color: $utakata-blue;
 }
