--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -37,10 +37,16 @@
   </ul>
   <h4 class="mt-4">更新履歴</h4>
   <dl>
+    <dt><time>2020/10/24</time></dt>
+    <dd>
+      <ul class="ml">
+        <li>歌人ページで横スクロールバーの位置が高すぎる問題を解消</li>
+      </ul>
+    </dd>
     <dt><time>2020/08/14</time></dt>
     <dd>
       <ul class="ml">
-        <li>一部の画面でページのタイトルの表示が崩れていた問題を解消</li>
+        <li>一部の画面でページのタイトルの表示が崩れている問題を解消</li>
       </ul>
     </dd>
     <dt><time>2020/06/27</time></dt>
