--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -156,7 +156,7 @@ a:hover {
 .tanka-index {
   width: 100%;
   min-height: 100%;
-  white-space: pre;
+  white-space: nowrap;
   overflow-x: scroll;
   overflow-y: hidden;
 }
