プロフィールの表示が崩れいている問題を解消

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -161,6 +161,13 @@ a:hover {
   overflow-y: hidden;
 }
 
+.user-show {
+  width: 100%;
+  min-height: 100%;
+  overflow-x: scroll;
+  overflow-y: hidden;
+}
+
 .h-88 {
   height: 88vh;
 }
