--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -37,6 +37,12 @@
   </ul>
   <h4 class="mt-4">更新履歴</h4>
   <dl>
+    <dt><time>2020/11/01</time></dt>
+    <dd>
+      <ul class="ml">
+        <li>プロフィールの表示が崩れいている問題を解消</li>
+      </ul>
+    </dd>
     <dt><time>2020/10/24</time></dt>
     <dd>
       <ul class="ml">
