--- a/app/views/infos/index.html.erb
+++ b/app/views/infos/index.html.erb
@@ -41,6 +41,7 @@
     <dd>
       <ul class="ml">
         <li>プロフィールの表示が崩れいている問題を解消</li>
+        <li>横スクロールバーの位置が低い問題を解消</li>
       </ul>
     </dd>
     <dt><time>2020/10/24</time></dt>
